--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -47,8 +47,12 @@ button {
   line-height: 4rem;
 }
 
-.logo span {
+.logo span img{
   font-weight: 300;
+  width: 15vw;
+  height: 10vw;
+  object-fit: cover;
+  margin-left: -10vw;
 }
 
 .hamburger-menu {
@@ -101,7 +105,7 @@ button {
 header {
   min-height: 100vh;
   width: 100%;
-  background: url("../../../public/markus-winkler-aId-xYRTlEc-unsplash-_1_.webp") no-repeat top center / cover;
+  background: url("../../../public/julius-drost-nsrSyI-JUYg-unsplash\ \(1\).jpg") no-repeat center center / cover;
   position: relative;
 }
 
@@ -112,7 +116,7 @@ header {
   top: 0;
   left: 0;
   /* background-color: rgba(43, 51, 59, 0.8); */
-  background-color: rgba(13, 35, 57, 0.8);
+  /* background-color: rgba(13, 35, 57, 0.1); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,6 +127,7 @@ header {
   text-align: center;
   color: #fff;
   padding: 0 2rem;
+  margin-top: 40vh;
 }
 
 .title {
