--- a/src/component/Jsonprettier/Jsonprettier.css
+++ b/src/component/Jsonprettier/Jsonprettier.css
@@ -17,3 +17,31 @@
     margin: 0;
     overflow: scroll;
 }
+
+
+
+
+.__json-pretty__ {
+    line-height: 1.3;
+    color: #f5bb12;
+    background: white;
+    overflow: auto;
+}
+.__json-pretty__ .__json-key__ {
+    color: red;
+}
+.__json-pretty__ .__json-value__ {
+    color: navy;
+}
+.__json-pretty__ .__json-string__ {
+    color: #7fd6fa;
+}
+.__json-pretty__ .__json-boolean__ {
+    color: #4bae16;
+}
+.__json-pretty-error__ {
+    line-height: 1.3;
+    color: #f5bb12;
+    background: white;
+    overflow: auto;
+}
