--- a/src/component/Demo/Demo.css
+++ b/src/component/Demo/Demo.css
@@ -1,4 +1,4 @@
-.demo-main-container{
+.demo-main-container {
   width: 100vw;
   height: 100vh;
   position: relative;
@@ -8,9 +8,7 @@
   /* background: url('https://images.unsplash.com/photo-1663875928932-3bf9dba77e26?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80'); */
 }
 
-
-
-.demo-search{
+.demo-search {
   width: 42vw;
   height: 100vh;
   background-color: white;
@@ -18,8 +16,7 @@
   position: relative;
 }
 
-
-.demo-nosearch{
+.demo-nosearch {
   width: 3.5vw;
   height: 100vh;
   background-color: white;
@@ -27,8 +24,7 @@
   position: relative;
 }
 
-
-.demo-search-subcontainer{
+.demo-search-subcontainer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -38,7 +34,7 @@
   border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
 }
 
-.demo-search-subcontainer-item{
+.demo-search-subcontainer-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -46,23 +42,23 @@
   cursor: pointer;
 }
 
-.icon-item{
- font-size: 2rem;
+.icon-item {
+  font-size: 2rem;
 }
 
-.icon-item-text{
+.icon-item-text {
   font-size: 1.2rem;
   text-align: center;
 }
 
-.text-area-container{
+.text-area-container {
   width: 42vw;
   height: 72vh;
   padding: 1rem;
   position: relative;
 }
 
-.demo-textarea{
+.demo-textarea {
   border-color: transparent;
   font-size: 1.4rem;
   color: black;
@@ -72,17 +68,16 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  resize: none; 
+  resize: none;
   width: 100%;
   height: 100%;
- 
 }
-.demo-textarea::placeholder { 
+.demo-textarea::placeholder {
   color: black;
-  opacity: 1; 
+  opacity: 1;
 }
 
-.text-search-btn{
+.text-search-btn {
   width: 4rem;
   height: 4rem;
   position: absolute;
@@ -95,26 +90,25 @@
   border: 0.1rem solid grey;
 }
 
-.search-next{
+.search-next {
   font-size: 2rem;
 }
 
-.result-container{
+.result-container {
   overflow-y: scroll;
   width: 41vw;
   height: 74vh;
   padding: 1rem;
   position: relative;
-
 }
-.demo-footer{
+.demo-footer {
   height: 8vh;
   width: 42vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.demo-footer button{
+.demo-footer button {
   width: 10rem;
   height: 3rem;
   border-radius: 1rem;
@@ -123,10 +117,19 @@
   background-color: white;
 }
 
-.close-button{
+.close-button {
   position: absolute;
   top: 1rem;
   right: 1rem;
   font-size: 2rem;
   cursor: pointer;
+}
+
+.highlightText {
+  color: "#FF5B00";
+  padding: 0 0.2rem 0 0.2rem;
+  font-weight: "bold";
+  text-decoration: "underline";
+  text-decoration-color: "#0E185F";
+  text-decoration-thickness: "2px";
 }
